# sistema-leds-auto

./: Codigo.gs  INSTRUCOES.md  PLANO-ESCALA-V2.md  briefing-escala.md  conversa-completa.md
v2/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.bat
v2/.github/workflows/: ci.yml
v2/.vibeauryon/: design-session.json
v2/app/: config.py  database.py  deps.py  main.py  models.py  security.py  utils.py
v2/app/routes/: api.py  auth.py  dashboard.py  extras.py  stream.py  webhooks.py
v2/app/services/: backup.py  followup.py  health.py  notify.py  pipeline.py
v2/app/services/ai/: __init__.py  classifier.py  gemini.py  niche_expander.py  personalizer.py  qualifier.py
v2/app/services/enrichment/: __init__.py  email_validator_svc.py  hunter.py
v2/app/services/messaging/: __init__.py  brevo.py  templating.py  whatsapp.py
v2/app/services/scrapers/: __init__.py  apify_instagram.py  apify_linkedin.py  base.py  google_maps.py  paginas_amarelas.py  racius.py
v2/app/static/css/: app.css
v2/app/templates/: _icons.html  analytics.html  audit.html  base.html  campaign_detail.html  campaign_new.html  campaign_result.html  campaign_run.html  campaigns.html  dashboard.html  import.html  lead_detail.html  leads.html  login.html  settings.html  status.html  templates.html
v2/app/workers/: scheduler.py
v2/data/backups/: leads_20260525_130207.db
v2/scripts/: import_sheets_csv.py
v2/tests/: test_qualifier.py  test_security.py  test_templating.py  test_utils.py  test_webhook_match.py
(+1 files in other folders)
